<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/input_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:inputType="number"
        android:hint="@string/enter_number1"

        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/input_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:inputType="number"
        android:hint="@string/enter_number2"

        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"
        />

    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/result_here"

        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="220dp"
        />

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginTop="280dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"

        android:text="@string/plus"
        android:textSize="30sp"
        />

    <Button
        android:id="@+id/subtract_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginTop="350dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"

        android:text="@string/minus"
        android:textSize="30sp"
        />

    <Button
        android:id="@+id/divide_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginTop="420dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"

        android:text="@string/divide"
        android:textSize="30sp"
        />

    <Button
        android:id="@+id/multiply_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginTop="490dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"

        android:text="@string/Multiply"
        android:textSize="30sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>